<resources>
    <string name="app_name">MathES</string>
    <string name="full_app_name">Mathematics Equations Solver</string>
    <string name="wip">Coming Soon</string>

    <string name="about_page">MathES: Mathematics Equations Solver\nBy David Tran\n2019</string>

    // buttons
    <string name="course_button">Course Sections</string>
    <string name="calculator_button">Calculator</string>
    <string name="graphing_button">Graphing Calculator</string>
    <string name="forum_button">Forum</string>
    <string name="about_button">About</string>
    <string name="done">Done</string>

    // courses
    <string name="topics">Topics</string>
    <string name="choose_topic">Choose a Topic:</string>
    <string name="giveEq">Enter an equation to solve:</string>
    <string name="equation">Equation</string>
    <string name="linalg_button">Linear Algebra</string>
    <string name="calculus_button">Calculus 1</string>

    // linear algebra
    <string name="rref_button">Row Reduced Echelon Form</string>
    <string name="determinant_button">Determinant</string>

    // calculus
    <string name="deriv_button">Derivative</string>
    <string name="integ_button">Integral</string>

</resources>
